--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-html, body{
-    min-height: 200px;   
-}
 
 /* Cabeçalho */
 header{
@@ -20,7 +17,7 @@ header{
 /* Grid de Produtos */
 .container{
     background-color: #ccc;
-    min-height: 100px;
+    min-height: 300px;
     padding: 50px;
 }
 .products-container{
@@ -29,7 +26,7 @@ header{
 }
 .card{
     width: 31%;
-    display: inline;
+    display: inline-block;
     margin: 1% 1%;
     padding: 15px;
     min-height: 300px;
